--- a/404.html
+++ b/404.html
@@ -1,10 +1,8 @@
 ---
 layout: page
-title: 404 Not Found
+title: "404"
 permalink: /404
 ---
-<header>
-  <h1>404</h1>
-</header>
+<h2>404</h2>
 <p>There doesn't appear to be anything here. Sorry about that.</p>
 <p>If you've followed a link expecting something to be here, you can <a href="mailto:{{ site.email }}?subject=Page%20not%20found">contact me</a>.</p>
