Refactored blog html and layouts

--- a/blog.html
+++ b/blog.html
@@ -1,9 +1,7 @@
 ---
-layout: default
+layout: page
 title: Blog
 ---
-{% include header.html %}
-
 <section class="list">
 	{% if site.posts.size == 0 %}
 		<p class="text-center">Nothing published yet!</p>
@@ -21,5 +19,3 @@ title: Blog
 		{% endfor %}
 	{% endif %}
 </section>
-
-{% include footer.html %}
